# TIP-ocaml

./: .gitignore  Makefile  README.md  dune  tip-ocaml.opam
src/analyzing/: CFG_build.ml  CFG_build.mli  Normalizing.ml  Normalizing.mli  dune
src/core/: AST.ml  CFG.ml  IL.ml  Type.ml  dune
src/main/: Actions.ml  Actions.mli  CLI.ml  CLI.mli  Main.ml  dune
src/parsing/: Lexer_tip.mll  Parse_tip.ml  Parse_tip.mli  Parser_tip.mly  Token_helpers.ml  Token_helpers.mli  dune
src/typing/: Typing.ml  Typing.mli  dune
tests/exercises/: code_2.3.tip  ex_2.4.tip
tests/parsing/: iterate.tip  recurse.tip
tests/souffle/: Makefile  live.dl  reachable.dl  section_5_4.tip  sign.dl
tests/typing/: .basic.tip.swp  .recurse.tip.swp  basic.tip  obfuscated.tip  twice.tip
