(library
 (name tip_parsing)
 (wrapped false)
 (libraries
   str
   commons
   lib_parsing ; Parse_info.ml
 )
 (preprocess
   (pps
     profiling.ppx
     ppx_deriving.show
     ppx_deriving.eq
     ppx_hash
   )
 )
)

(ocamllex Lexer)
(menhir (modules Parser)
        (flags --unused-tokens --explain --fixed-exception))
