(library
 (name tip_parsing)
 (wrapped false)
 (libraries
   fpath
   commons
   lib_parsing ; Parse_info.ml
   tip_core
 )
 (preprocess
   (pps
     profiling.ppx
     ppx_deriving.show
     ppx_deriving.eq
     ppx_hash
   )
 )
)

(ocamllex Lexer_tip)
(menhir (modules Parser_tip)
        (flags --unused-tokens --explain --fixed-exception))
